[package]
name = "leak-check-rs"
version = "0.1.0"
edition = "2024"
description = "Rust client for the LeakCheck API"
license = "BSD-3-Clause"
repository = "https://github.com/SassafrasAI/leak-check-rs"
keywords = ["leakcheck", "osint", "breach", "security", "api"]
categories = ["api-bindings", "network-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
dotenvy = "0.15"